--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Description</title>
+    <link rel="stylesheet" th:href="@{../css/main.css}" />
+
 </head>
 <body>
+<header th:replace="all_products :: header"></header>
+
 <p>You added this product: </p>
 <table>
     <tr>
@@ -29,5 +33,8 @@
     <input type="hidden" name="_method" value="delete" />
     <button type="submit" id="submitButton"> DELETE </button>
 </form>
+
+<footer th:replace="all_products :: footer"></footer>
+
 </body>
 </html>
